# gb_django

./: .gitignore  Makefile  pyproject.toml  stack.yml
_asterisked_tasks_lesson_2/: 4,6.txt
authapp/: models.py  views.py
authapp/templates/registration/: login.html  profile_edit.html  registration.html
config/: .env.dist  conf_production.py  settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/migrations/: 0010_data_migration_remove_tmp.py
mainapp/templates/mainapp/: contacts.html  courses.html  courses_detail.html  courses_list.html  doc_site.html  index.html  login.html  news.html  news_detail.html  news_list.html
mainapp/tests/: tests_selenium.py
templates/: base.html
templates/admin/: base_site.html
templates/includes/: footer.html  main_menu.html  messages.html
